Changelog
=========

1.0b3 - unreleased
------------------

- Improved call-out and pull-quote styling.
  [limi]

- Improved general overlay styling.
  [limi]

- Improved history pop-up styling.
  [limi]

- Fix columns in prefs_main_template.
  [davisagli]

- Pass the current view to getColumnsClass.  This is needed if the view is not
  the @@plone view and it has different portlets (such as on the portlet
  management views).  This closes http://dev.plone.org/plone/ticket/10320.
  [davisagli]

- Repositioned the searchbox for RTL scripts.
  Fixes http://dev.plone.org/plone/ticket/10367.
  [emanlove]

- Stop hiding the (now) non-existing sendto action.
  Refs http://dev.plone.org/plone/ticket/8800.
  [dukebody]

- Fixed help_biography message.
  [vincentfretin]


1.0b2 - 2010-03-05
------------------

- Established Sunburst-specific browser view similar to ploneview and moved
  out the logic of applying special width/position CSS class on
  #portal-column-content from main_template.pt to that view.
  Closes http://dev.plone.org/plone/ticket/10292
  [spliter]

- Set up testing environment for the package
  [spliter]

- Inline images should not have borders (makes it hard to insert graphics that
  are part of a sentence, or similar), and we don't have any other round
  elements in the basic design (the edit bar is special, and is round to
  differentiate itself from the "stable elements"), so removed the rounded
  corners for image frames.
  [limi]

- Added some padding to a <fieldset> in order to have better-looking forms.
  References http://dev.plone.org/plone/ticket/9824
  [spliter]

- Moved language selector and personal tools viewlets into plone.portalheader
  viewlet manager and re-positioned them relatively instead of absolute.
  Closes http://dev.plone.org/plone/ticket/10252
  [spliter]

- Hide the "up to groups overview" link and fieldset border in the "add group"
  overlay. 
  Closes http://dev.plone.org/plone/ticket/10149