@@ -10,40 +10,6 @@
         name="Sunburst Theme"
         />
 
-    <!-- Viewlets registration -->
-    <browser:viewlet
-        name="plonetheme.sunburst.personal_bar"
-        manager="plone.app.layout.viewlets.interfaces.IPortalHeader"
-        class="plone.app.layout.viewlets.common.PersonalBarViewlet"
-        template="templates/personal_bar.pt"
-        permission="zope2.View" 
-        layer=".interfaces.IThemeSpecific"
-        />
-
-    <browser:viewlet
-        name="plonetheme.sunburst.path_bar"
-        manager="plone.app.layout.viewlets.interfaces.IAboveContentTitle"
-        class="plone.app.layout.viewlets.common.PathBarViewlet"
-        permission="zope2.View" 
-        layer=".interfaces.IThemeSpecific"
-        />
-
-    <browser:viewlet
-        name="plonetheme.sunburst.site_actions"
-        manager="plone.app.layout.viewlets.interfaces.IPortalFooter"
-        class="plone.app.layout.viewlets.common.SiteActionsViewlet"
-        permission="zope2.View" 
-        layer=".interfaces.IThemeSpecific"
-        />
-        
-    <browser:viewlet  
-        name="plone.app.i18n.locales.languageselector"
-        manager="plone.app.layout.viewlets.interfaces.IPortalHeader"
-        class="plone.app.i18n.locales.browser.selector.LanguageSelector"
-        permission="zope2.View" 
-        layer=".interfaces.IThemeSpecific"
-        />
-        
     <!-- Sunburst special view -->
     <browser:page
         for="*"
